# Firn

./: .gitignore  README.md
global-market-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
global-market-agent/config/: digest_watchlist.yaml
global-market-agent/data/sources/: bilibili_accounts.yaml.example  source_registry.yaml  wechat_accounts.yaml.example
global-market-agent/firn/: agent_principles.md
global-market-agent/firn/notebook/: core_mind.md
global-market-agent/scripts/: migrate_title_en.py
global-market-agent/src/: __main__.py  main.py
global-market-agent/tests/: test_api_endpoints.py  test_api_services.py  test_audit_manifest.py  test_audit_pipeline.py  test_audit_tools.py  test_audit_verdict.py  test_context_injection.py  test_context_manager.py  test_core_agent.py  test_data_freshness.py  test_digest_pipeline.py  test_divergence.py  test_event_log.py  test_filter_agent.py  test_ingest_cached.py  test_integration.py  test_kb_commit.py  test_kb_tools.py  test_knowledge_base.py  test_macro_agent.py  test_macro_pulse.py  test_main_graph.py  test_market_snapshot.py  test_news_fetcher.py  test_observability.py  test_perception.py  test_prediction_logger.py  test_retrain_pipeline.py  test_reverse_dcf.py  test_trace.py  test_user_input.py  test_watchlist_monitor.py  test_web_search.py
global-market-mcp/: .dockerignore  mcp_server.py  pyproject.toml
global-market-mcp/src/: config.py  mcp_server.py
global-market-mcp/tests/: test_cache.py  test_macroeconomic.py  test_tools.py  test_validation.py  test_yfinance_source.py
web-ui/: Dockerfile  (+2 more)
(+188 files in other folders)
