[project]
name = "global-market-agent"
version = "0.1.0"
description = "LangGraph multi-agent system for US stock financial analysis"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.56",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.11",
    "langchain-google-genai>=2.0.0",
    "langchain-mcp-adapters>=0.1.1",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.0",
    "bilibili-api-python>=17.4",
    "curl_cffi>=0.7.0",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
