[project]
name = "global-market-mcp"
version = "0.1.0"
description = "MCP data server for US stock financial analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "yfinance>=0.2.51",
    "pandas>=2.2.0",
    "ta>=0.11.0",
    "exchange-calendars>=4.13",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "lxml>=6.1.0",
    "html5lib>=1.1",
    "fredapi>=0.5.0",
]

# Phase 2 dependencies (not yet needed):
# "edgartools>=3.0.0"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
